fix: update Modal styles for improved positioning and overflow handling style: enhance LoadingBtn and ModalLogout styles for consistency

--- a/src/components/ModalLogout/ModalLogout.module.css
+++ b/src/components/ModalLogout/ModalLogout.module.css
@@ -22,6 +22,7 @@
   box-shadow: 1px 9px 15px 0 rgba(0, 0, 0, 0.2);
   color: var(--text-button);
   background: #fcfcfc;
+  flex-shrink: 0;
 
   @media (min-width: 768px) {
     width: 300px;
